--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.7.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
